se borra el archivo normalize

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>IMC</title>
 </head>
@@ -24,7 +23,7 @@
                     <input type="number" name="" id="estatura">
                 </div>
                 <div class="btn">
-                    <input type="button" value="Calcular">
+                   <strong> <input type="button" value="Calcular"> </strong> 
                 </div>
                 
             </div>
