--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="number" name="" id="estatura">
                 </div>
                 <div class="btn">
-                   <strong> <input type="button" value="Calcular"> </strong> 
+                    <input type="button" value="Calcular">
                 </div>
                 
             </div>
@@ -34,6 +34,6 @@
             </div>
         </div>
     </main>
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
