se agrega el cálculo y diagnóstico

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                     <input type="number" name="" id="estatura">
                 </div>
                 <div class="btn">
-                    <input type="button" value="Calcular">
+                    <input type="button" value="CALCULAR">
                 </div>
                 
             </div>
             <div class="resultado">
                 <h3>IMC</h3>
-                <h3 id="res"></h3>
-                <h3 id="text"></h3>
+                <h3 id="res">-</h3>
+                <h3 class="text"></h3>
             </div>
         </div>
     </main>
